syntax = "proto3";

package rivet.backend.pkg.cluster.msg.server_provision;

import "proto/common.proto";
import "proto/backend/cluster.proto";

/// name = "msg-cluster-server-provision"
/// parameters = [
/// 	{ name = "server_id" },
/// ]
message Message {
    rivet.common.Uuid datacenter_id = 1;
    rivet.common.Uuid server_id = 2;
    rivet.backend.cluster.PoolType pool_type = 3;
    rivet.backend.cluster.Provider provider = 4;
    repeated string tags = 5;
}
